--- a/index.html
+++ b/index.html
@@ -259,20 +259,44 @@
       `Scope: ONLY content inside the frame titled "${TARGET_FRAME_TITLE}". Ignore everything else.`,
       ``,
       `MCP procedure (strict):`,
+      ``,
       `1) Call context_explore on the board. Find the frame whose title matches "${TARGET_FRAME_TITLE}" and capture its item id.`,
-      `2) Call board_list_items filtered to that frame as parent/container. Only include: doc, sticky_note, text.`,
-      `3) Inside that frame, find EXACTLY ONE Miro Doc (doc-format). Call doc_get on that doc.`,
+      ``,
+      `2) Call board_list_items filtered to that frame as parent/container.`,
+      `   Only include: doc, table.`,
+      ``,
+      `3) Inside that frame, find EXACTLY ONE Miro Doc (doc-format) named or used as the MASTER SPEC.`,
+      `   Call doc_get on that doc.`,
       `   - Treat the returned markdown as the MASTER SPEC and follow it verbatim.`,
       `   - Do not reinterpret or paraphrase it; implement it.`,
-      `4) Collect ALL sticky_note texts inside that same frame (expected: 6).`,
-      `   - Treat them as additional requirements / selected inputs.`,
-      `   - If the master spec contains a placeholder for "CRITERIA_SUBSET_JSON", fill it best-effort using exactly those 6 sticky texts.`,
-      `5) Build the app end-to-end in Lovable (MVP first), strictly based on the master spec + those 6 stickies.`,
+      ``,
+      `4) Inside that same frame, find a Miro Table named exactly "Voted Criterias".`,
+      `   - Treat this table as the ONLY source of the selected criteria subset.`,
+      `   - Do NOT read or use sticky notes as criteria inputs.`,
+      ``,
+      `   The table columns are expected to be:`,
+      `   - Criterion`,
+      `   - Category`,
+      `   - Definition`,
+      `   - Why_it_matters`,
+      `   - ID`,
+      `   - weight`,
+      ``,
+      `   Parse the table deterministically and use it exactly as specified in the MASTER SPEC.`,
+      ``,
+      `5) Optional (if present): Inside that same frame, find a SECOND Miro Doc named "Scoring Rulebook".`,
+      `   - Call doc_get on it and treat it as an additional deterministic rule catalog for scoring inference (as referenced by the MASTER SPEC).`,
+      `   - If it is not present, proceed without it.`,
+      ``,
+      `6) Build the app end-to-end in Lovable (MVP first), strictly based on:`,
+      `   - the MASTER SPEC doc, and`,
+      `   - the "Voted Criterias" table (and optional "Scoring Rulebook" doc).`,
       ``,
       `Deliverable:`,
       `- Generate the full working mini-app in Lovable.`,
-      `- Keep requirements traceable: reference the Miro doc id and sticky ids you used.`
-    ].join("\n");
+      `- Keep requirements traceable: reference the Miro doc id (MASTER SPEC) and the table id ("Voted Criterias") you used.`
+    ].join("\\n");
+
   }
 
   function buildLovableUrl(prompt) {
